# sigscape

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: main.yml
data/: generate.sh  sigscape.desktop  sigscape.drawio  sigscape.rc  sigscape16.h  sigscape32.h  sigscape48.h
imgui/: imconfig.h
include/: ADQAPI_simulation.h  buffer_thread.h  commands.h  data_acquisition.h  data_processing.h  data_types.h  digitizer.h  directory_watcher.h  embedded_python.h  embedded_python_thread.h  error.h  file_watcher.h  format.h  gen4_digitizer.h  generator.h  hotplug.h  hotplug_linux.h  hotplug_windows.h  identification.h  imgui_config.h  imgui_extensions.h  lockfree_queue.h  log.h  marker.h  message_channels.h  message_thread.h  mock_adqapi.h  mock_adqapi_definitions.h  mock_digitizer.h  mock_system_manager.h  persistent_configuration.h  persistent_directories.h  processing.h  record_frame.h  screenshot.h  simulated_data_acquisition.h  simulated_digitizer.h  simulator.h  smart_buffer_thread.h  system_manager.h  (+3 more)
include/mock/: adqapi.h  adqapi_definitions.h  control_unit.h  digitizer.h  generator.h  system_manager.h
include/opengl/: frame_buffer.h  learning.h  shader.h  texture.h  vertex_buffer.h
mock/: CMakeLists.txt
mock/include/: ADQAPI.h  adqapi.h  generator.h  mock_control_unit.h  mock_digitizer.h  mock_system_manager.h  pulse_generator.h  sine_generator.h
mock/src/: generator.cpp  mock_control_unit.cpp  mock_digitizer.cpp  mock_system_manager.cpp  pulse_generator.cpp  sine_generator.cpp
src/: data_processing.cpp  data_types.cpp  digitizer.cpp  directory_watcher.cpp  embedded_python.cpp  embedded_python_thread.cpp  file_watcher.cpp  format.cpp  gen4_digitizer.cpp  generator.cpp  hotplug_linux.cpp  hotplug_windows.cpp  identification.cpp  imgui_extensions.cpp  log.cpp  main.cpp  marker.cpp  mock_adqapi.cpp  mock_digitizer.cpp  mock_system_manager.cpp  persistent_configuration.cpp  persistent_directories.cpp  processing.cpp  record_frame.cpp  screenshot.cpp  simulated_data_acquisition.cpp  simulated_digitizer.cpp  simulator.cpp  ui.cpp  window.cpp
src/mock/: CMakeLists.txt  adqapi.cpp  control_unit.cpp  digitizer.cpp  generator.cpp  system_manager.cpp
src/opengl/: frame_buffer.cpp  opengl.cpp  shader.cpp  shader.fs  shader.gs  shader.vs  texture.cpp  vertex_buffer.cpp
test/: CMakeLists.txt  Makefile  tdata_processing.cpp  tdigitizer.cpp  tdirectory_watcher.cpp  tfile_watcher.cpp  tgenerator.cpp  tlockfree_queue.cpp  tmessage_channels.cpp  tmessage_thread.cpp  tprocessing.cpp  tpython.cpp  tsimulated_data_acquisition.cpp  tsimulated_digitizer.cpp  tsimulator.cpp  tsine_generator.cpp  tthread_safe_queue.cpp  tvalue.cpp
